import "ResourceVO.proto";

option java_package = "com.pureland.common.protocal";
option java_outer_classname = "GatherReqProtocal";

message GatherReq {
	required int64 sid 					=1;
	required ResourceVO resourceVO 		=2; 
	required int64 gatherTime 			=3;
}
